@@ -1,3 +1,7 @@
+2007-11-12  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
+
+	* Feature #6579 continued: Backtracking on the use of Prototype.js by htmlArea RTE.
+
 2007-11-10  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
 
 	* (cleanup) Protect rtehtmlarea 'for' loops from properties possibly added by JS frameworks.
